--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,8 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:name="com.example.ekir.project.DungeonCrawlerApplication"
+        android:icon="@mipmap/dungeoncrawlericon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
