--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,14 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:screenOrientation="landscape"
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:name=".PlayActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape" >
         </activity>
         <activity
-            android:screenOrientation="landscape"
             android:name=".SplashActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,9 +24,14 @@
             </intent-filter>
         </activity>
         <activity
-            android:screenOrientation="landscape"
             android:name=".MenuActivity"
-            android:label="@string/title_activity_menu" >
+            android:label="@string/title_activity_menu"
+            android:screenOrientation="landscape" >
+        </activity>
+        <activity
+            android:screenOrientation="landscape"
+            android:name=".AboutActivity"
+            android:label="@string/title_activity_about" >
         </activity>
     </application>
 
