--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
             android:screenOrientation="landscape" >
         </activity>
         <activity
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
             android:name=".SplashActivity"
             android:label="@string/app_name"
             android:screenOrientation="landscape" >
@@ -24,11 +25,13 @@
             </intent-filter>
         </activity>
         <activity
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
             android:name=".MenuActivity"
             android:label="@string/title_activity_menu"
             android:screenOrientation="landscape" >
         </activity>
         <activity
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
             android:screenOrientation="landscape"
             android:name=".AboutActivity"
             android:label="@string/title_activity_about" >
