--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,10 @@
             android:screenOrientation="landscape" >
         </activity>
         <activity
-            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
             android:name="se.erikgustafsson.ekir.lostchef.SplashActivity"
             android:label="@string/app_name"
-            android:screenOrientation="landscape" >
+            android:screenOrientation="landscape"
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,16 +25,22 @@
             </intent-filter>
         </activity>
         <activity
-            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
             android:name="se.erikgustafsson.ekir.lostchef.MenuActivity"
             android:label="@string/title_activity_menu"
-            android:screenOrientation="landscape" >
+            android:screenOrientation="landscape"
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >
         </activity>
         <activity
-            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
-            android:screenOrientation="landscape"
             android:name="se.erikgustafsson.ekir.lostchef.AboutActivity"
-            android:label="@string/title_activity_about" >
+            android:label="@string/title_activity_about"
+            android:screenOrientation="landscape"
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >
+        </activity>
+        <activity
+            android:name="se.erikgustafsson.ekir.lostchef.CreditsActivity"
+            android:label="@string/title_activity_credits"
+            android:screenOrientation="landscape"
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
         </activity>
     </application>
 
